mywork/force-app/main/default/objects/Backlog_User__c/Backlog_User__c.object-meta.xml
<CustomObject>
    <label>Backlog Item User</label>
    <nameField>
        <displayFormat>BU-{0000}</displayFormat>
        <label>Backlog Item User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Item Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>