mywork/force-app/main/default/objects/Backlog_User__c/fields/ALM_User__c.field-meta.xml
<CustomField>
    <fullName>ALM_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ALM User</label>
    <referenceTo>ALM_User__c</referenceTo>
    <relationshipLabel>Backlog Users</relationshipLabel>
    <relationshipName>Backlog_Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>