mywork/force-app/main/default/objects/Backlog_User__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog Item</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Backlog Users</relationshipLabel>
    <relationshipName>Backlog_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>