mywork/force-app/main/default/objects/Backlog_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Role of the team member</description>
    <label>Role</label>
    <referenceTo>ALM_User_Role__c</referenceTo>
    <relationshipLabel>Backlog Item Users</relationshipLabel>
    <relationshipName>Backlog_Item_Users</relationshipName>
    <type>Lookup</type>
</CustomField>